fix(ConfigurationFieldModelConverter.java): Fixed some code that used Collections.emptyList() instead of the newer List.of()